--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+ul {
+  list-style: none;
+}
+
+.details {
+  border: solid 1px;
+  border-color: lightgrey;
+  background-color: #F4F7F8;
+  border-radius: 4px;
+  padding: 15px 20px;
+}
